Add Node.js server setup with Docker support and README documentation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,14 @@ services:
       - 8000:8000
     volumes:
       - ./python-server/src:/app/src
+  
+  node-server:
+    build:
+      context: ./node-server
+      dockerfile: Dockerfile
+    ports:
+      - 8001:8001
+    volumes:
+      - ./node-server/src:/usr/src/app/src
+      - ./node-server/package.json:/usr/src/app/package.json
+      - ./node-server/package-lock.json:/usr/src/app/package-lock.json      
